--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>team.Name</title>
+    <link href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap" rel="stylesheet">
+    <link href="main.css" rel="stylesheet"> 
 </head>
 <body>
- 
+ <p class="test">public Class Members</p>
 </body>
 </html>
