--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>team.Name</title>
 </head>
 <body>
- 
+ <header><img id="banner" src="Assets\VisualBackground.png"></header>
 </body>
 </html>
