Added list on main page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap" rel="stylesheet">
     <link href="main.css" rel="stylesheet"> 
 </head>
-<body>
- <p class="test">public Class Members</p>
+<body class="test">
+    <p>team.Motto = "2 Legit To Git"</p>
+    <p>public List<Members></p>
+        <ul>
+            <li><a href="">Player 1</a></li>
+            <li><a href="">Player 2</a></li>
+            <li><a href="">Player 3</a></li>
+            <li><a href="">Player 4</a></li>
+        </ul>
 </body>
 </html>
