--- a/index.html
+++ b/index.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>team.Name</title>
     <link href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap" rel="stylesheet">
-    <link href="main.css" rel="stylesheet"> 
+    <link href="main.css" rel="stylesheet">
 </head>
+
 <body>
     <header><img id="banner" src="Assets\VisualBackground.png"></header>
     <p>team.Motto = "2 Legit To Git"</p>
-    <p>public List<Person></p>
-        <ul>
-            <li><a href="">Player 1</a></li>
-            <li><a href="">Player 2</a></li>
-            <li><a href="#JH">Player 3</a></li>
-            <li><a href="">Player 4</a></li>
-        </ul> 
-        <div id="JH">
-            <p>public class Person</p>
-              <p>{</p>
-                <p>
-                        public string Name = "Joe Hallam"
-                </p>
-                <p>
-                        public string ScreenName = "DSR"
-                </p>
-                <p>
-                        public string FavoriteGame = "Super Mario Sunshine"
-                </p>
-                <p>
-                    public string
-                    <a href="https://ddragon.leagueoflegends.com/cdn/10.4.1/img/profileicon/4068.png" target="blank">My Profile Pic</a> 
-                </p>
-              <p>}</p>
-        </div>
+    <p>public List<Person>
+    </p>
+    <ul>
+        <li><a href="">Player 1</a></li>
+        <li><a href="">Player 2</a></li>
+        <li><a href="#JH">Player 3</a></li>
+        <li><a href="">Player 4</a></li>
+    </ul>
+    <div id="JH">
+        <p>public class Person</p>
+        <p>{</p>
+        <p>
+            public string Name = "Joe Hallam"</p>
+        <p>
+            public string ScreenName = "DSR"</p>
+        <p>
+            public string FavoriteGame = "Super Mario Sunshine"</p>
+        <p>
+            public string
+            <a href="https://ddragon.leagueoflegends.com/cdn/10.4.1/img/profileicon/4068.png" target="blank">My Profile Pic</a>
+        </p>
+        <p>}</p>
+    </div>
 </body>
+
 </html>
