Joe section added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header><img id="banner" src="Assets\VisualBackground.png"></header>
     <p>team.Motto = "2 Legit To Git"</p>
-    <p>public List<Person>
+    <p>public List&lt;Person&gt;
     </p>
     <ul>
         <li><a href="">Player 1</a></li>
