--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <p>public class Person</p>
         <p>{</p>
         <p>
-            public string Name = "Joe Hallam"</p>
+            public string Name = "Joe Hallam";</p>
         <p>
-            public string ScreenName = "DSR"</p>
+            public string ScreenName = "DSR";</p>
         <p>
-            public string FavoriteGame = "Super Mario Sunshine"</p>
+            public string FavoriteGame = "Super Mario Sunshine";</p>
         <p>
             public string
             <a href="https://ddragon.leagueoflegends.com/cdn/10.4.1/img/profileicon/4068.png" target="blank">My Profile Pic</a>
